test/data/semantic/bad/struct_expr_type_mismatch.coy
struct S(i64);

fn main() -> () {
    let x = S();

    ()
}
